kubernetes/infrastructure/cloudnative-pg/networkpolicy-forgejo-postgres.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cloudnative-pg-forgejo-postgres
  namespace: cnpg-system
  labels:
    app.kubernetes.io/name: cloudnative-pg
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: cloudnative-pg
      app.kubernetes.io/instance: cloudnative-pg
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: forgejo
          podSelector:
            matchLabels:
              app.kubernetes.io/managed-by: cloudnative-pg
              cnpg.io/cluster: forgejo-postgres
              cnpg.io/podRole: instance
      ports:
        - port: 5432
          protocol: TCP
        - port: 8000
          protocol: TCP
